Activate Client side charts from excel

--- a/Charts/Charts.csproj
+++ b/Charts/Charts.csproj
@@ -160,7 +160,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Content\Sheets\sandbox_test.xlsx" />
+    <Content Include="Content\Sheets\Book1.xlsx" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
